# I2CDevices

./: CMakeLists.txt  CMakeSettings.json
AS5048B/: CMakeLists.txt  as5048b.cpp  as5048b.h
BMX055/: BMG160.cpp  BMG160.h  CMakeLists.txt
I2C/: CMakeLists.txt  I2CBus.cpp  I2CBus.h  I2CSlave.h  Readmd.md
Sample/: AS5048Btest.cpp  BMX055test.cpp  CMakeLists.txt
